# UniVerse-AI-Monitoring

./: .dockerignore  .gitignore  Agent_v1.ipynb  Dockerfile  RAG_system.ipynb  UNI-Agent-v0.ipynb  context_test.ipynb  my_parser.py  parser_docx.py  pyproject.toml  requirements.txt  system_promtp_nanobot.md  temp_system_prompt.txt  web-scraping.ipynb
Azure_graph_api/: SETUP_GUIDE.md  email_monitor_graph.py  email_monitor_graph_with_ai.py
IMAP_monitor/: README_monitoring.md  email_monitor.py  email_monitor_with_ai.py
Power_Automate/: fastapi_webhook.py  web_hook.py
nanobot_code/: context.py  memory.py
skills/syllabus/: SKILL.md
