[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.133.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "requests>=2.32.5",
]
